Clean up to match core code